女王節報名登記頁 - 新增table 【如何填寫卡號？】

--- a/iiot/taoyuang1000/register/index-queen-keyin.html
+++ b/iiot/taoyuang1000/register/index-queen-keyin.html
@@ -57,6 +57,71 @@
                     </fieldset>
                 </form>
                 <button class="btn-style">確認送出</button>
+                <div class="top-notes mag-top">
+                    <h4>如何填寫卡號？</h4>
+                    <table class="table-style" border="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <th colspan="2">悠遊卡（電子票證）</th>
+                                </tr>
+                                <tr>
+                                    <td width="25%" align="center">認列範圍<span>消費限制</span></td>
+                                    <td align="center">僅認列一般消費（詳定義<a href="https://www.easycard.com.tw/use-range" target="_blank">1</a>、<a
+                                            href="https://www.easycard.com.tw/new?cls=1&id=1508381388" target="_blank">2</a>）：<br>
+                                        登記、消費、回饋，限同一張卡片</td>
+                                </tr>
+                                <tr>
+                                    <td align="center">卡號位置</td>
+                                    <td align="center">
+                                        <a href="images/image2-0414.png" target="_blank"><img class="img-card-example" src="images/image2-0414.png" width="100%"></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="center">客服專線</td>
+                                    <td align="center">02-412-8880</td>
+                                </tr>
+                                <tr>
+                                    <th colspan="2">一卡通MONEY（電子支付）</th>
+                                </tr>
+                                <tr>
+                                    <td align="center">認列範圍<span>消費限制</span></td>
+                                    <td align="center">僅認列一般消費（<a href="https://www.i-pass.com.tw/Page/AboutAccount" target="_blank">詳定義</a>）：<br>
+                                        通路線上/線下交易（我的條碼/掃描）</td>
+                                </tr>
+                                <tr>
+                                    <td align="center">卡號位置</td>
+                                    <td align="center">
+                                        <a href="images/image4.png" target="_blank"><img class="img-card-example" src="images/image4.png"
+                                                width="100%"></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="center">客服專線</td>
+                                    <td align="center">07-791-2000</td>
+                                </tr>
+                                <tr>
+                                    <th colspan="2">第一銀行（信用卡）</th>
+                                </tr>
+                                <tr>
+                                    <td align="center">認列範圍<span>消費限制</span></td>
+                                    <td align="center">
+                                        <span>一般消費(<a href="https://card.firstbank.com.tw/sites/card/CardFaq" target="_blank">詳定義</a>)及自動加值</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="center">卡號位置</td>
+                                    <td align="center">
+                                        <a href="images/image1.png" target="_blank"><img class="img-card-example" src="images/image1.png"
+                                                width="100%"></a>
+                                        <a href="images/image3.png" target="_blank"><img class="img-card-example" src="images/image3.png"
+                                                width="100%"></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="center">客服專線</td>
+                                    <td align="center">02-2173-2999</td>
+                                </tr>
+                    </table>
+                </div>
             </section>
         </main>
         <footer class="footer">
