女王節 - 修改P13內容

--- a/iiot/taoyuang1000/queen/date-02.html
+++ b/iiot/taoyuang1000/queen/date-02.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>【Global Mall 環球購物中心 A19】 桃園市民卡－卡好女王節</title>
+    <title>【Global Mall 環球購物中心 桃園A19】 桃園市民卡－卡好女王節</title>
     <meta name='description'content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
     <meta name='keywords' content="數位桃園, 數位振興, 聯合台灣大車隊,桃園市民, TTPUSH,乘車套票, 抽獎" />
     <meta property="og:image" content="images/share-pic-queen.jpg" />
-    <meta property="og:title" content="【Global Mall 環球購物中心 A19】 桃園市民卡－卡好女王節" />
+    <meta property="og:title" content="【Global Mall 環球購物中心 桃園A19】 桃園市民卡－卡好女王節" />
     <meta property="og:url" content="https://taoyuan1000.tycg.gov.tw" />
     <meta property="og:description" content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
     <meta property="og:type" content="website" />
@@ -126,8 +126,8 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面
-                                                即可掃描現場QRCODE領取百貨禮券200元（限量200份，送完為止）。</p>
+                                            <p>2F服務台出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面
+                                                即可掃描現場QRCODE領取百貨禮券200元（限量200份，每人於期間內限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -138,7 +138,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場QRCODE兌換禮券100元（限量300份，送完為止；消費滿千元即可折抵）。</p>
+                                            <p>2F服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場QRCODE兌換禮券100元（限量300份，每人於期間內限兌換一份，送完為止；單筆消費滿千元即可折抵）。。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -252,11 +252,6 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-36.jpg" alt="BROTHERHOOD">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
                                         <img src="images/store/logo-29.jpg" alt="PALLADIUM">
                                     </div>
                                 </li>
@@ -322,11 +317,6 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-42.png" alt="湛盧咖啡">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
                                         <img src="images/store/logo-43.jpg" alt="Crocs">
                                     </div>
                                 </li>
@@ -351,7 +341,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <p>2022/12/31前至旗下品牌出示桃園市民卡卡片或LINE官方帳號「註冊/登錄」頁面，即享下列優惠：</p>
+                            <p>2022/6/30前至旗下品牌出示桃園市民卡卡片或LINE官方帳號「註冊/登錄」頁面，即享下列優惠：</p>
                             <ul class="list">
                                 <li>
                                     <p>2F 優廚－憑桃園市市民卡消費享9折。</p>
@@ -387,9 +377,6 @@
                                     <p>3F 衫隆－憑桃園市市民卡消費享9折。</p>
                                 </li>
                                 <li>
-                                    <p>3F 名留BROTHERHOOD－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
                                     <p>3F PALLADIUM－憑桃園市市民卡消費享9折。</p>
                                 </li>
                                 <li>
@@ -405,7 +392,7 @@
                                     <p>3F 總裁牛肉麵－憑桃園市市民卡消費享9折。</p>
                                 </li>
                                 <li>
-                                    <p>3F 虎韓式料理－憑桃園市市民卡消費享9折。</p>
+                                    <p>3F 初虎韓式料理－憑桃園市市民卡消費享9折。</p>
                                 </li>
                                 <li>
                                     <p>3F Avivi複合店－憑桃園市市民卡消費享9折。</p>
@@ -427,9 +414,6 @@
                                 </li>
                                 <li>
                                     <p>4F TOY WORLD－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>4F 湛盧咖啡－憑桃園市市民卡消費享9折。</p>
                                 </li>
                                 <li>
                                     <p>3F Crocs－憑桃園市市民卡消費享95折。</p>
@@ -461,7 +445,7 @@
                                     <p>為配合政府防疫政策，疫情期間若餐飲業無法提供內用時優惠將不適用。</p>
                                 </li>
                                 <li>
-                                    <p>環球購物中心 A19保有活動事項保留異動及最終解釋權。</p>
+                                    <p>Gloal Mall桃園A19保有活動事項保留異動及最終解釋權。</p>
                                 </li>
                             </ul>
                         </div>
