--- a/iiot/taoyuang1000/join-tycg/change-pw.html
+++ b/iiot/taoyuang1000/join-tycg/change-pw.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
     <head>
         <meta charset="UTF-8">
-        <title>桃園市民卡 - 登入</title>
+        <title>桃園市民卡 - 重設密碼</title>
         <meta name='description' content=""/>
         <meta name='keywords' content=""/>
         <meta name="MobileOptimized" content="width">
@@ -18,7 +18,7 @@
         <main class="landing">
             <section class="contents-box">
                 <div class="logo"></div>
-                <h1 class="maintitle">桃園市民卡</h1>
+                <h1 class="maintitle">重設密碼</h1>
                 <form class="edit-userinfo"> 
                     <fieldset class="field">
                         <div class="bg-field for-phone clearfix">
@@ -30,19 +30,29 @@
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
                             <div class="r-input">
+                                <input type="text" id="" placeholder="驗證碼" required="required">
+                                <button class="btn-default">發送驗證碼</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <br>
+                    <br>
+                    <fieldset class="field">
+                        <div class="bg-field for-verify clearfix">
+                            <div class="r-input">
                                 <input type="text" id="" placeholder="密碼" required="required">
                             </div>
                         </div>
                     </fieldset>
-                    <p class="text-forget"><a href="changepw.html">忘記密碼?</a></p>
+                    <fieldset class="field">
+                        <div class="bg-field for-verify clearfix">
+                            <div class="r-input">
+                                <input type="text" id="" placeholder="確認密碼" required="required">
+                            </div>
+                        </div>
+                    </fieldset>
                 </form>
-                <div class="both-btn">
-                    <button class="btn-default btn-white">註冊</button>
-                    <button class="btn-default">登入</button>
-                </div>
-                <p class="text-or"><span>或</span></p>
-                <button class="btn-default btn-linelogin">與LINE連動</button>
-                <p class="text-confirm link">點擊市民卡LINE登入，即表示<br>您確認已詳閱<a href="#">隱私權政策</a>，並且同意<a href="#">使用條款</a></p>
+                <button class="btn-default">送出</button>
             </section>
         </main>
     </body>
