--- a/iiot/taoyuang1000/join-tycg/privacy.html
+++ b/iiot/taoyuang1000/join-tycg/privacy.html
@@ -14,9 +14,11 @@
     </head>
     <body>
         <!--  main  -->
-        <main class="landing">
+        <main class="landing for-dark">
+            <!-- 這個要+在上面才會是暗黑版>~< -->
             <section class="contents-box privacy-content">
-                <h1 class="subtitle">隱私權及安全政策</h1>
+                <div class="logo-s"></div>
+                <h1 class="maintitle">隱私權及安全政策</h1>
                 <h3>關於個人資料保護，請參閱以下「數位桃園1000+市民卡振興加碼」的隱私權聲明：
                 「數位桃園1000+市民卡振興加碼」為桃園市政府資訊科技局所建置之活動共構平台(網站)，為支持個人資料保護，維護個人隱私權，「數位桃園1000+市民卡振興加碼」謹以下列聲明，向您說明「數位桃園1000+市民卡振興加碼」蒐集個人資料之目的、類別、利用範圍及方式、以及您所得行使之權利等事項。</h3>
                 
